[tool.poetry]
name = "browser-use-template"
version = "0.1.0"
description = ""
authors = ["Sushrit_Lawliet <sushrit.pk21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
browser-use = "^0.1.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
